[gd_scene load_steps=7 format=2]

[ext_resource path="res://TitleScreen/ContinueScreen/ContinueScreen.gd" type="Script" id=1]
[ext_resource path="res://TitleScreen/ContinueScreen/background.jpg" type="Texture" id=2]
[ext_resource path="res://Audio/Music/GameOver.ogg" type="AudioStream" id=3]
[ext_resource path="res://Audio/SFX/Menu/Cursor.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/SFX/Menu/Select.wav" type="AudioStream" id=5]
[ext_resource path="res://TitleScreen/FileSelectScreen/Fruit.png" type="Texture" id=6]

[node name="ContinueScreen" type="Node2D"]

position = Vector2( -205.017, 76.2775 )
scale = Vector2( 0, 0 )
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="." index="0"]

anchor_mode = 0
rotating = false
current = false
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="background" type="TextureRect" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0

[node name="Song" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 3 )
volume_db = -15.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Cursor" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 4 )
volume_db = -20.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Select" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 5 )
volume_db = -20.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Fruit1" type="TextureRect" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 29.0
margin_top = 55.0
margin_right = 45.0
margin_bottom = 71.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
stretch_mode = 0

[node name="Fruit2" type="TextureRect" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 29.0
margin_top = 79.0
margin_right = 45.0
margin_bottom = 95.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
stretch_mode = 0

[node name="Fruit3" type="TextureRect" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 29.0
margin_top = 103.0
margin_right = 45.0
margin_bottom = 119.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
stretch_mode = 0

[node name="Blink" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 0.12
one_shot = false
autostart = false


